# awesome-tests-project

./: README.md  pyproject.toml
framework/config/: settings.py
framework/fixtures/: account.py  base.py
framework/fixtures/data/: user.py
framework/fixtures/http/services/: account.py  auth.py  mail.py  register.py  users.py
framework/helpers/: account.py
framework/helpers/service_wrappers/account/: account.py
framework/helpers/service_wrappers/auth/: auth.py
framework/helpers/service_wrappers/mail/: mail.py
framework/helpers/service_wrappers/register/: register.py
framework/helpers/service_wrappers/users/: users.py
framework/internal/clients/http/account_api/: __init__.py
framework/internal/clients/http/account_api/apis/: account_api.py
framework/internal/clients/http/account_api/models/: api_models.py
framework/internal/clients/http/auth_api/: __init__.py
framework/internal/clients/http/auth_api/apis/: auth_api.py
framework/internal/clients/http/auth_api/models/: api_models.py
framework/internal/clients/http/mail_api/: __init__.py
framework/internal/clients/http/mail_api/apis/: mail_api.py
framework/internal/clients/http/mail_api/models/: api_models.py
framework/internal/clients/http/register_api/: __init__.py
framework/internal/clients/http/schemas/: account_api.json  auth_api.json  mail_api.json  register_api.json  users_api.json
framework/internal/clients/http/users_api/: __init__.py
tests/: conftest.py
tests/e2e/register_service/account_api/: test_post_user_register.py
(+4 files in other folders)
