[tool.poetry]
name = "awesome-tests-project"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
restcodegen = "^1.1.1"
pydantic-settings = "^2.10.1"
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"


[tool.mypy]
python_version = "3.10"
exclude = ["framework/internal/http"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true